<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/transparent_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:id="@+id/frameLayout">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/junes"
                android:id="@+id/junes_back"/>
        </FrameLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="3dp">
        <TextView android:id="@+id/junes_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:textColor="@color/color_accent_a400"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/money_1"
                android:id="@+id/junes_money1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text=" tanti "
                android:textColor="@color/color_accent_a400"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/junes_money1"
                android:id="@+id/junes_money_quantity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/yen"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/junes_money_quantity"
                android:id="@+id/junes_money2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/products"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/hint_text"
                android:id="@+id/junes_items"
                android:layout_below="@+id/junes_money1"
                android:layout_alignStart="@+id/junes_money1"
                android:layout_marginTop="20dp" />

            <View style="@style/Divider"
                android:layout_below="@id/junes_items"
                android:id="@+id/junes_divider" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/junes_item_list"
                android:layout_below="@+id/junes_divider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <View style="@style/Divider" android:layout_marginTop="10dp"
                android:layout_below="@id/junes_item_list"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>