<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/conn_root">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/transparent_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connectivity_status"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/hint_text"
        android:id="@+id/textView8"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp" />

    <View style="@style/Divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <com.github.jorgecastilloprz.FABProgressCircle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bt"
            app:arcColor="@color/color_accent_a200"
            app:arcWidth="@dimen/progress_arc_stroke_width"
            app:circleSize="mini">
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/ic_bluetooth_white_24dp"
                android:layout_margin="16dp"
                app:borderWidth="0dp"
                android:id="@+id/view" />

        </com.github.jorgecastilloprz.FABProgressCircle>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/progress_bt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Large Text"
                android:id="@+id/bluetooth_main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/bluetooth_desc" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:fabSize="mini"
            android:src="@drawable/ic_nfc_white_24dp"
            app:borderWidth="0dp"
            android:id="@+id/view2" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/view2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Large Text"
                android:id="@+id/nfc_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/nfc_desc" />
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/Divider"/>

    <TextView
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_trade_server"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:padding="10dp"
        android:layout_margin="5dp" />

    <View style="@style/MiniDivider"/>

    <TextView
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_trade_client"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:padding="10dp"
        android:layout_margin="5dp" />

    <View style="@style/Divider"
        android:layout_marginTop="10dp"/>
</LinearLayout>